--- a/package.json
+++ b/package.json
@@ -7,6 +7,12 @@
     "start": "react-native start"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^12.7.3",
+    "@react-native-firebase/auth": "^12.7.3",
+    "@react-native-firebase/firestore": "^12.7.3",
+    "@react-navigation/bottom-tabs": "^6.0.5",
+    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native-stack": "^6.1.0",
     "expo": "~42.0.1",
     "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
@@ -15,10 +21,17 @@
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-paper": "^4.9.2",
     "react-native-reanimated": "~2.2.0",
+    "react-native-responsive-screen": "^1.4.2",
+    "react-native-safe-area-context": "^3.3.0",
     "react-native-screens": "~3.4.0",
-    "react-native-unimodules": "~0.14.5",
-    "react-native-web": "~0.13.12"
+    "react-native-swiper": "^1.6.0",
+    "react-native-unimodules": "^0.14.6",
+    "react-native-vector-icons": "^8.1.0",
+    "react-native-web": "~0.13.12",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
